# SIRIUS-offline-analysis-code

./: README.md  README.txt
SiriusUserLib/: CMakeLists.txt
SiriusUserLib/includes/: Calibration.h  Correlation.h  DecayEvent.h  DigitalCFD.h  DigitalFilters.h  DssdData.h  DssdDataPoint.h  DssdEvent.h  DssdParameters.h  DssdPixel.h  Event.h  GeData.h  GeDataPoint.h  GeEvent.h  GeParameters.h  Global.h  MakeDssdEvents.h  MakeTunnelEvents.h  Numexo2Data.h  Numexo2DataPoint.h  RecoilEvent.h  TimeAlignment.h  TrackerCoBoData.h  TrackerCoBoEvent.h  TrackerCoBoParameters.h  TrackerData.h  TrackerEvent.h  TrackerNumexo2Data.h  TrackerNumexo2DataPoint.h  TrackerNumexo2Event.h  TrackerNumexo2Parameters.h  TrackerParameters.h  TunnelData.h  TunnelDataPoint.h  TunnelEvent.h  TunnelMacroPixel.h  TunnelParameters.h  TunnelPixel.h  UTTree.h  UTypes.h  (+17 more)
SiriusUserLib/sources/: Calibration.cc  Correlation.cc  DecayEvent.cc  DigitalCFD.cc  DigitalFilters.cc  DssdData.cc  DssdDataPoint.cc  DssdEvent.cc  DssdParameters.cc  DssdPixel.cc  Event.cc  GeData.cc  GeEvent.cc  GeParameters.cc  Global.cc  MakeDssdEvents.cc  MakeTunnelEvents.cc  Numexo2Data.cc  Numexo2DataPoint.cc  RecoilEvent.cc  TimeAlignment.cc  TrackerCoBoData.cc  TrackerCoBoEvent.cc  TrackerCoBoParameters.cc  TrackerData.cc  TrackerEvent.cc  TrackerNumexo2DataPoint.cc  TrackerNumexo2Event.cc  TrackerNumexo2Parameters.cc  TrackerParameters.cc  TunnelData.cc  TunnelDataPoint.cc  TunnelEvent.cc  TunnelMacroPixel.cc  TunnelParameters.cc  TunnelPixel.cc  UTTree.cc  calibration.cc  digitalCFD.cc  digitalFilters.cc  (+11 more)
program/: CMakeLists.txt  Doxyfile  README.txt  createDocumentation.csh  sirius.cc  siriusTest.cc
program/include/: CFDOptimization.hh  CFDparameters.hh  ReadDataFile.hh  ReadDataFiles.hh  analysis.hh  digitalCFD.hh  digitalFilterOptimization.hh  digitalFilters.hh  global.hh  myHistograms.hh  resolutionStrip.hh  signalInfo.hh  signalTreatment.hh  siriusDataFrame.hh  trap_parameter.hh
program/includes/: ReadDataFile.hh  myHistograms.hh
program/source/: CFDOptimization.cc  ReadDataFile.cc  ReadDataFiles.cc  analysis.cc  digitalCFD.cc  digitalFilterOptimization.cc  digitalFilters.cc  global.cc  myHistograms.cc  signalInfo.cc  signalTreatment.cc  siriusDataFrame.cc
program/sources/: ReadDataFile.cc  myHistograms.cc
